<resources>
    <string name="app_name">KAFFEINE</string>
    <string name="choice_your_favourite_coffee">Choice your \n Favourite Coffee</string>
    <string name="get_started">Get Started</string>
    <string name="search_anything">Search anything...</string>
    <string name="see_all">See all</string>
    <string name="popular_coffees">Popular Coffees</string>
    <string name="profile">Profile</string>
    <string name="my_order">My Order</string>
    <string name="wishlist">Wishlist</string>
    <string name="cart">Cart</string>
    <string name="explorer">Explorer</string>
    <string name="arslan_ahmed">Arslan Ahmed</string>
    <string name="category">Category</string>
    <string name="description">Description</string>
    <string name="back">Back</string>
    <string name="title">Title</string>
    <string name="coffee_size">Coffee Size</string>
    <string name="small">Small</string>
    <string name="medium">Medium</string>
    <string name="large">Large</string>
    <string name="qty">Qty.</string>
    <string name="minus">-</string>
    <string name="_1">1</string>
    <string name="plus">+</string>
    <string name="_0">0</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="price">$0</string>

    <!-- Content Descriptions -->
    <string name="item_image_description">Image of the coffee item</string>
    <string name="back_button_arrow">Back button arrow</string>
    <string name="favorite_button">Favorite button</string>
    <string name="rating_star">Rating star</string>
    <string name="decrease_quantity">Decrease quantity</string>
    <string name="increase_quantity">Increase quantity</string>
    <string name="subtotal">Subtotal</string>
    <string name="enter_your_discount_code">Enter Your Discount Code</string>
    <string name="apply">Apply</string>
    <string name="proceed_to_checkout">Proceed to Checkout</string>
    <string name="delivery">Delivery</string>
    <string name="total_tax">Total Tax</string>
    <string name="back_btn">Back Btn</string>
    <string name="total">Total</string>
</resources>